prevent long urls going off screen on small screens

--- a/crawler_app/crawler_app/static/css/d3_css.css
+++ b/crawler_app/crawler_app/static/css/d3_css.css
@@ -22,3 +22,7 @@
 .node--leaf {
   pointer-events: none;
 }
+
+.breakWord {
+  word-wrap: break-word;
+}
